--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,48 @@ body {
   background-color: #fff;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.section {
+  padding: 120px 0px 120px 0px;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1128px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  gap: 76px;
+  padding: 24px 0;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -21,6 +63,8 @@ body {
 
 .list {
   list-style-type: none;
+  display: flex;
+  gap: 40px;
 }
 
 .address {
@@ -29,6 +73,9 @@ body {
 
 .list-address {
   list-style-type: none;
+  display: flex;
+  gap: 40px;
+  padding: 24px 0px;
 }
 
 .list-address .link {
@@ -50,6 +97,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
 .list .link:hover,
@@ -65,6 +113,14 @@ body {
   background-color: #2e2f42;
 }
 
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
+  padding: 188px 0px;
+}
+
 .main-title {
   font-weight: 700;
   color: #ffffff;
@@ -72,6 +128,24 @@ body {
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  max-width: 496px;
+}
+
+.advantages-container {
+  padding: 120px 0px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .title-advantages {
@@ -88,6 +162,15 @@ body {
 
 .team-card {
   background-color: #ffffff;
+}
+
+.list-advantages {
+  display: flex;
+  gap: 8px;
+}
+
+.list .text {
+  padding-top: 8px;
 }
 
 .title-page {
@@ -123,6 +206,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   background: #4d5ae5;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .button:hover,
@@ -137,8 +224,15 @@ body {
 .footer .text {
   color: #f4f4fd;
   letter-spacing: 0.02em;
+  max-width: 264px;
+  padding-top: 16px;
 }
 
 .footer .colortext {
   color: #f4f4fd;
+}
+
+.footer-container {
+  display: inline-block;
+  padding: 100px 0px 100px 156px;
 }
