--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,6 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 48px;
-  padding: 188px 0px;
 }
 
 .main-title {
@@ -129,10 +128,6 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   max-width: 496px;
-}
-
-.advantages-container {
-  padding: 120px 0px;
 }
 
 .visually-hidden {
@@ -173,6 +168,28 @@ ul {
   padding-top: 8px;
 }
 
+.list-team {
+  display: flex;
+  gap: 24px;
+  width: calc((100% - 72px) / 4);
+}
+
+.list .team-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+}
+
+.list-team .text {
+  padding-top: 8px;
+}
+
 .title-page {
   color: #2e2f42;
   font-weight: 700;
@@ -181,6 +198,7 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  padding-bottom: 72px;
 }
 
 .text-title {
@@ -189,6 +207,7 @@ ul {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  padding-top: 32px;
 }
 
 .text {
@@ -196,6 +215,21 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  max-width: 1158px;
+}
+
+.portfolio-card {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
 }
 
 .button {
