--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,7 @@ p {
 }
 
 ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -55,6 +54,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
+  margin-right: 76px;
 }
 
 .colortext {
@@ -118,6 +118,10 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 48px;
+  padding: 188px 0;
+}
+
+.advantages-container {
 }
 
 .main-title {
@@ -161,7 +165,11 @@ ul {
 
 .list-advantages {
   display: flex;
-  gap: 8px;
+  gap: 24px;
+}
+
+.features {
+  width: calc((100% - 72px) / 4);
 }
 
 .list .text {
@@ -175,15 +183,23 @@ ul {
 }
 
 .list .team-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
+}
+
+.text-card {
+  padding: 32px 0;
+}
+
+.text-card .text-title {
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.text-card .text {
+  text-align: center;
 }
 
 .list-team .text {
@@ -198,7 +214,7 @@ ul {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .text-title {
@@ -207,7 +223,6 @@ ul {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-top: 32px;
 }
 
 .text {
@@ -220,16 +235,26 @@ ul {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  max-width: 1158px;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 
 .portfolio-card {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-card .text-title {
+  margin-bottom: 72px;
+}
+
+.portfolio-text .text-title {
+  margin-bottom: 8px;
+}
+
+.portfolio-text {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .button {
@@ -244,6 +269,8 @@ ul {
   width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  border: none;
 }
 
 .button:hover,
@@ -253,20 +280,20 @@ ul {
 
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .footer .text {
   color: #f4f4fd;
   letter-spacing: 0.02em;
   max-width: 264px;
-  padding-top: 16px;
 }
 
 .footer .colortext {
   color: #f4f4fd;
 }
 
-.footer-container {
+.footer .logo {
   display: inline-block;
-  padding: 100px 0px 100px 156px;
+  margin-bottom: 16px;
 }
